# fsfilm-iot

./: README.md  st-outtatimers-iot.code-workspace
Outtatimers Controller/: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini  run_host_tests.sh
Outtatimers Controller/.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
Outtatimers Controller/src/: CMakeLists.txt  config.h  effect_manager.h  led_driver.h  main.cpp
Outtatimers Controller/test/: CMakeLists.txt  test_main.cpp
Outtatimers Controller/test/mocks/: esp_event.h  esp_http_server.h  esp_log.h  esp_rom_sys.h  esp_timer.h  esp_wifi.h  nvs_flash.h
Outtatimers Controller/test/mocks/driver/: gpio.h
Outtatimers Controller/test/mocks/freertos/: task.h
Outtatimers Controller/test/mocks/lwip/: err.h
Outtatimers Portal/: AGENTS.md
Outtatimers Portal/.kilocode/rules/memory-bank/: architecture.md  context.md  tech.md
Outtatimers Portal/src/: config.h  config_manager.cpp  config_manager.h  main.cpp  portal_effect.h  wifi_input_source.h
Outtatimers Portal/test/: test_effect_saturation.test.js  test_integration.test.js  test_saturation_control.test.js  test_virtual_gradients.cpp  test_web_interface.test.js
OuttatimersController/: .gitignore  AGENTS.md  CMakeLists.txt  platformio.ini  wifi_credentials.h
OuttatimersController/.kilocode/: session-memory.md
OuttatimersController/.kilocode/rules/memory-bank/: architecture.md  context.md  product.md  tech.md
OuttatimersController/src/: CMakeLists.txt  button_handler.cpp  button_handler.h  config.h  effect_manager.cpp  effect_manager.h  led_driver.cpp  led_driver.h  main.cpp  wifi_input_source.cpp  wifi_input_source.h
OuttatimersController/test/: test_main.cpp
OuttatimersController/test/mocks/: esp_netif.h  esp_system.h
OuttatimersController/test/mocks/freertos/: FreeRTOS.h
OuttatimersController/test/mocks/lwip/: sys.h
Turbolifted/: AGENTS.md  Makefile  README.md  platformio.ini
Turbolifted/data/: index.html
Turbolifted/src/: config.h  config_manager.cpp  config_manager.h  debounce.h  effects.cpp  input_manager.h  led_driver.h  main.cpp  startup_sequence.h  status_led.cpp  status_led.h  turbolift_effect.cpp  turbolift_effect.h  wifi_input_source.h
Turbolifted/test/: test_effect_saturation.test.js  test_integration.test.js  test_saturation_control.test.js  test_turbolift_effect.cpp  test_virtual_gradients.cpp  test_web_interface.test.js
